
+ Version 1.3.3 Released

- Collapses nodes instead of expanding them when finished scanning registry
- Upgrades settings to newer version if program has been updated
- Displays icon associated with section in treeview advanced
- Removed expanding icon control from treeview advanced
- Changed icon for Program Locations in treeview to correct one
- No longer imports ole32.dll for ActiveX/COM scanner
- Checks ProgID's for missing icons
- Checks for access to regedit.exe and adds correct access if its incorrect
- Fixed icon for software settings
- Tries to catch exception when removing startup entry if file or registry value doesnt exist
- Checks if user is administrator when program starts up

+ Version 1.3.4 Released

- LRC has translations for 17 different languages
- Fixed backup directory, it doesnt point to the common program files once options are changed
- The backup and logs directory will be in the current directory if the release is portable edition
- Renamed scanner files to more proper names
- Uses my own code instead of Type.GetTypeFromProgID()
- Replaced checkboxes with listview in options so different languages can be displayed properly
- Added power user option that allows the program to automatically repair problems and close the program
- Country flags are displayed beside each language
- Automatically changes to current ui culture once the program is started
- Translated strings that are not controls and are in the code files
- Fixed error when switching to chinese (traditional or simplified)
- Upgraded TreeView Advanced to version 1.7
- Expands all nodes when finished scanning registry
- Added a sorter tree model so the results can be sorted
- Details are shown in a window instead of in the main window
- Added status strip to display welcome and results messages

+ Version 1.4 Released

- Restore points are saved to correct location (v1.4.0.1 released)