@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<desktop scan="33" scanned="20091118233725" built="20091119200839" lang="en" pane="TValidationPane" col="20" row="Text">
+<desktop scan="34" scanned="20091125210510" built="20091119200839" lang="en" pane="TLogPane" col="20" row="Text">
   <language id="en" autoime="0" autokeyboard="0"/>
   <language id="fr" autoime="0" autokeyboard="0"/>
   <language id="es" autoime="0" autokeyboard="0"/>
@@ -18,7 +18,7 @@
   <language id="th" autoime="0" autokeyboard="0"/>
   <language id="pl" autoime="0" autokeyboard="0"/>
   <triggers>
-    <item class="TRemoveUnusedItemsTrigger" position="3"/>
+    <item class="TRemoveUnusedItemsTrigger" position="4"/>
   </triggers>
   <sheet>
     <columns>
@@ -44,7 +44,7 @@
       <item class="TTranslationColumn" lang="it" width="58"/>
       <item class="TTranslationColumn" lang="en" width="58"/>
     </columns>
-    <params processall="1" scope="ssAllColumns" origin="soEntireScope">
+    <params processall="1" origin="soEntireScope">
       <findtext>Little Registry Cleaner</findtext>
       <findtext>lokaliz</findtext>
     </params>
