@@ -42,7 +42,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="bPortableEdition" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="bOptionsAutoRepair" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
