@@ -60,7 +60,7 @@
                 <value>http://littlecleaner.sourceforge.net/update.xml</value>
             </setting>
             <setting name="bPortableEdition" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </Little_Registry_Cleaner.Properties.Settings>
     </applicationSettings>
