@@ -338,3 +338,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 + Version 1.4 Released
 
 - Restore points are saved to correct location (v1.4.0.1 released)
+- Removed unneeded label in scan dialog
